Project Card and Hero Updates

--- a/nav.html
+++ b/nav.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Home Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
+
+
+</head>
+<body>
+ 
 <nav id="navbar">
     <div class="nav-logo"><a href="#"><img src="./Website Images/Logo/Ben Thomas Official Logo Assets NEW_BT Full Horiz_light grey.svg" alt="Ben Thomas Logo"></a></div>
     <div class="nav-links">
@@ -41,3 +54,11 @@
         <a href="./index.html"><img src="./Website Images/Icons/Email-icon.svg" alt="Email icon"></a>
     </div>
 </div>
+
+
+
+    <script src="index.js"></script>
+  
+</body>
+</html>
+
