--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Home Page</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- <script src="index.js" defer></script> Link to JavaScript file -->
+    <script src="index.js" defer></script>
 
 
 </head>
@@ -24,26 +24,28 @@
 
     </div>
 
-    <main>
+    <div class="hero">
+        <div class="hero-content">
+            <p class="p3">
+                UI/UX DESIGNER | GRAPHIC DESIGNER
+            </p>
+            <h1>
+                Hello There! <span class="h1-gradient">I'm Ben</span>
+            </h1>
+            <p class="p2">
+                I'm a Graphic and UI/UX Designer with a passion for crafting designs that solve solutions and captivate audiences. Welcome to my portfolio!
+            </p>
+            <div class="hero-buttons">
+                <button class="btn-primary"><a href="#">Projects</a></button>
+                <button class="btn-primary"><a href="#">About Me</a></button>
 
-        <div class="hero">
-            <div class="hero-content">
-                <p class="p3">
-                    UI/UX DESIGNER | GRAPHIC DESIGNER
-                </p>
-                <h1>
-                    Hello There! <span class="h1-gradient">I'm Ben</span>
-                </h1>
-                <p class="p2">
-                    I'm a Graphic and UI/UX Designer with a passion for crafting designs that solve solutions and captivate audiences. Welcome to my portfolio!
-                </p>
-                <div class="hero-buttons">
-                    <button class="btn-primary"><a href="#">Projects</a></button>
-                    <button class="btn-primary"><a href="#">About Me</a></button>
-
-                </div>
             </div>
         </div>
+    </div>
+
+    <main>
+
+
 
         <div class="title-section">
             <p>
@@ -85,6 +87,8 @@
 
 
 
-    
+
+    <script src="index.js"></script>
+  
 </body>
 </html>
