--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
         </script>
     </div>
 
-    <div class="hero">
 
-    </div>
 
     <div class="hero">
+        <img src="./Website Images/Assets/Grid Hero Image.png"
         <div class="hero-content">
             <p class="p3">
                 UI/UX DESIGNER | GRAPHIC DESIGNER
@@ -70,11 +69,53 @@
                     <div class="pc1-button">
                         <a href="#">
                             <p class="p3">View Project</p>
-                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg">
+                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
                         </a>
                     </div>
                 </div>
-                <img src="./Website Images/LLP Application/LLP - Dashboard.jpg" alt="" class="pc1-img">
+                <img src="./Website Images/LLP Application/LLP - Dashboard-Home Page Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
+
+            </div>
+
+            <div class="project-card-1" id="pc">
+                <div class="pc1-main-content">
+                    <div class="pc1-content">
+                        <h3>
+                            Pristine Clean
+                        </h3>
+                        <p class="p3">
+                            UI/UX Design | Branding           
+                        </p>
+                    </div>
+                    <div class="pc1-button">
+                        <a href="#">
+                            <p class="p3">View Project</p>
+                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </a>
+                    </div>
+                </div>
+                <img src="./Website Images/Pristine Cline/PC Home Page-Portfolio Home Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
+
+            </div>
+
+            <div class="project-card-1" id="arrow">
+                <div class="pc1-main-content">
+                    <div class="pc1-content">
+                        <h3>
+                            Arrow Application
+                        </h3>
+                        <p class="p3">
+                            UI/UX Design
+                        </p>
+                    </div>
+                    <div class="pc1-button">
+                        <a href="#">
+                            <p class="p3">View Project</p>
+                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </a>
+                    </div>
+                </div>
+                <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
 
             </div>
         </div>
