--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Home Page</title>
+    <title>Navigation</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
 
@@ -12,14 +12,14 @@
 <body>
  
 <nav id="navbar">
-    <div class="nav-logo"><a href="#"><img src="./Website Images/Logo/Ben Thomas Official Logo Assets NEW_BT Full Horiz_light grey.svg" alt="Ben Thomas Logo"></a></div>
+    <div class="nav-logo"><a href="index.html"><img src="./Website Images/Logo/Ben Thomas Official Logo Assets NEW_BT Full Horiz_light grey.svg" alt="Ben Thomas Logo"></a></div>
     <div class="nav-links">
         <ul>
-            <li><a href="#">WORK</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">RESUME</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">THE VAULT</a></li>
+            <li><a href="index.html">WORK</a></li>
+            <li><a href="About.html">ABOUT</a></li>
+            <li><a href="Resume.html">RESUME</a></li>
+            <li><a href="Contact.html">CONTACT</a></li>
+            <li><a href="The Vault.html">THE VAULT</a></li>
         </ul>
     </div> 
 
@@ -42,11 +42,11 @@
 <div class="mobile-menu" id="mobileMenu">
     <!-- <div class="close-btn" id="closeBtn">&#10006;</div> -->
     <ul class="mobile-nav-links">
-        <li><a href="#">WORK</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">RESUME</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <li><a href="#">THE VAULT</a></li>
+        <li><a href="index.html">WORK</a></li>
+        <li><a href="About.html">ABOUT</a></li>
+        <li><a href="Resume.html">RESUME</a></li>
+        <li><a href="Contact.html">CONTACT</a></li>
+        <li><a href="The Vault.html">THE VAULT</a></li>
     </ul>
     <div class="mobile-social-icons">
         <a href="./index.html"><img src="./Website Images/Icons/IG Icon - grey fill.svg" alt="instagram icon"></a>
