--- a/index.html
+++ b/index.html
@@ -166,7 +166,84 @@
                             </a>
                         </div>
                     </div>
-                    <img src="./Website Images/Alltech Flyers Downsized/Flyer Grouping.png" alt="Labor Law Pro Application Dashboard" class="pc1-img" id="alltech-flyer-mockup">
+                    <img src="./Website Images/Alltech Flyers Downsized/Flyer Grouping.png" alt="Alltech Flyers Stacked" class="pc1-img" id="alltech-flyer-mockup">
+                </div>
+
+                <div class="project-card-2" id="NCBA">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                NCBA 2024 Conference
+                            </h3>
+                            <p class="p3">
+                                Promotional Materials
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                            <a href="#">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </a>
+                        </div>
+                    </div>
+                    <img src="./Website Images/NCBA 2024/NCBA 2024 Postcard-5x7.jpg" alt="NCBA postcard" class="pc1-img" id="NCBA-postcard">
+                </div>
+
+                <div class="project-card-2" id="Finlandia">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                Finlandia Infographic
+                            </h3>
+                            <p class="p3">
+                                Print and Publication
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                            <a href="#">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </a>
+                        </div>
+                    </div>
+                    <img src="./Website Images/Finlandia Infographic/Finlandia Kiosk Mockup.png" alt="Finlandia Kiosk Mockup" class="pc1-img" id="finlandia-mockup">
+                </div>
+
+                
+                <div class="project-card-2" id="cookbook">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                Finlandia Infographic
+                            </h3>
+                            <p class="p3">
+                                Print and Publication
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                            <a href="#">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </a>
+                        </div>
+                    </div>
+                    <img src="./Website Images/Mom's Cookbook/cookbook mockup front.png" alt="Mom's Cookbook Mockup" class="pc1-img" id="cookbook-mockup">
+                </div>
+
+                <div class="project-card-2" id="uk-social">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                UK Social Media Posts
+                            </h3>
+                            <p class="p3">
+                                Branding and Marketing
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                            <a href="#">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </a>
+                        </div>
+                    </div>
+                    <img src="./Website Images/UK Social Media/UK Phone Post Grouping.png" alt="University of Kentucky Social Media Mockups" class="pc1-img" id="social-mockup">
                 </div>
 
         </div>
@@ -259,7 +336,7 @@
                 </video>   
                 <h4>collaboration</h4>
                 <p class=".p2">
-                    Working with like-minded people and businesses to create stunning projects
+                    Working with like-minded people to create stunning projects
                 </p>
             </div>
           
