Nav Pages Update
Updated nav pages to be responsive with flex

--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
 
 <div class="hero-2">
     <div class="hero-2-container">
-        <div class="hero-2-content">
+        <div class="hero-2-content half">
             <div class="sub-title">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight">
                 <h5>
@@ -41,7 +41,7 @@
             </p>
             <img src="./Website Images/Assets/BT Signature-v1.svg" alt="Ben Thomas Signature">
         </div>
-        <div class="hero-2-img round-img">
+        <div class="hero-2-img half round-img">
             <img src="./Website Images/Assets/Ben Thomas Official Headshot.jpg" alt="Ben Thomas Headshot">
         </div>
     </div>
