--- a/Resume.html
+++ b/Resume.html
@@ -22,7 +22,7 @@
 
 <div class="hero-2">
     <div class="hero-2-container resume-container">
-        <div class="hero-2-content resume-content">
+        <div class="hero-2-content half resume-content">
             <div class="sub-title">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight">
                 <h5>
@@ -39,7 +39,7 @@
                 Download Resume
             </button>
         </div>
-        <div class="resume-img round-img">
+        <div class="resume-img half round-img">
             <img src="./Website Images/Assets/Resume 3d Render-v2.png" alt="Ben Thomas Headshot">
         </div>
     </div>
