initial llp commit

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 
-        <div class="title-section section-padding">
+        <div class="title-section section-padding" id="title-section-hero">
             <p>
                 Case Studies
             </p>
@@ -56,26 +56,25 @@
         </div>
 
         <div class="featured-projects section-padding">
-            <div class="project-card-1" id="LLP">
-                <div class="pc1-main-content">
-                    <div class="pc1-content">
-                        <h3>
-                            Labor Law Pro Application
-                        </h3>
-                        <p class="p3">
-                            UI/UX Design
-                        </p>
+            <a href="./llp.html" class="link-wrapper">
+                <div class="project-card-1" id="LLP">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                Labor Law Pro Application
+                            </h3>
+                            <p class="p3">
+                                UI/UX Design
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                                <!-- <p class="p3">View Project</p> -->
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </div>
                     </div>
-                    <div class="pc1-button">
-                        <a href="#">
-                            <!-- <p class="p3">View Project</p> -->
-                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                        </a>
-                    </div>
+                    <img src="./Website Images/LLP Application/LLP - Dashboard-Home Page Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
                 </div>
-                <img src="./Website Images/LLP Application/LLP - Dashboard-Home Page Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
-
-            </div>
+            </a>
 
             <div class="project-card-1" id="pc">
                 <div class="pc1-main-content">
