project section updates

--- a/llp.html
+++ b/llp.html
@@ -20,19 +20,19 @@
         </script>
      </div>   
 
-
-    <div class="project-hero">
-        <div class="ph-content">
-            <h2 class="h10">
-                INTERNAL APPLICATION
-            </h2>
-            <h1 class="h9">
-                Labor Law Pro
-            </h1>
+    <div class="project-hero-container">
+        <div class="project-hero">
+            <div class="ph-content">
+                <h2 class="h10">
+                    INTERNAL APPLICATION
+                </h2>
+                <h1 class="h9">
+                    Labor Law Pro
+                </h1>
+            </div>
+            <img src="./Website Images/LLP Application/LLP Hero Image.png" alt="LLP app dashborad">
         </div>
-        <img src="./Website Images/LLP Application/LLP Hero Image.png" alt="LLP app dashborad">
     </div>
-
     <main>
 
         <div class="main-section project-section">
@@ -48,9 +48,100 @@
             <p>
                 The Labor Law Pro (LLP) application focused on modernizing an outdated government application for Kentucky’s Education and Labor Cabinet (ELC) used to investigate companies illegally reporting employee wages and hours. The final product created a more intuitive, efficient, and accessible tool for government staff, saving time, resources, and costs to complete investigations.
             </p>
-
-
         </div>
+
+        <div class="project-info">
+            <hr class="thin-line">
+                <div class="project-info-text">
+                    <div class="info-section">
+                        <p class="p4">Timeline</p>
+                        <p class="info-bold">
+                            4.5 Months
+                        </p>
+                    </div>
+                    <div class="info-section">
+                        <p class="p4">Platform</p>
+                        <p class="info-bold">
+                            Internal Application
+                        </p>
+                    </div>
+                    <div class="info-section">
+                        <p class="p4">My Role</p>
+                        <p class="info-bold">
+                            Lead UX Designer <br>
+                            Lead Graphic Designer
+                        </p>
+                    </div>
+                </div>
+            <hr class="thin-line">
+        </div>
+
+
+        <div class="sub-section project-section">
+            <h6>
+                My Role
+            </h6>
+            <p>
+                I worked as the lead UX Designer, and Graphic Designer to create the branding, design system, and user interface of the LLP application. I worked with Business Analysts, Project Managers, and Developers to research, conceptualize, design, and deliver the final product.
+            </p>
+        </div>
+
+        <div class="main-section project-section" id="problem-statement-LLP">
+            <div class="section-subtitle">
+                <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
+                <h2 class="h8">
+                    Problem Statement
+                </h2>
+            </div>
+            <h6>
+                The Current Application Has Limited Functionality, Accessibility Issues, and is Unengaging
+            </h6>
+            <p>
+                Staff investigating illegal wage and hour reporting are hindered by an outdated, visually unappealing, and poorly accessible application that lacks critical functionality. This limits their ability to investigate and act on cases efficiently, resulting in unnecessary time spent on tasks, delays in enforcement actions, and additional resources and costs.
+            </p>
+        </div>
+
+        <div class="project-image round-img">
+            <img src="./Website Images/LLP Application/LLP Problems.jpg" alt="LLP application problems">
+        </div>
+
+        <div class="number-section sub-section project-section">
+            <img src="./Website Images/Icons/Numbers/Property 1=1.svg" alt="number 1">
+            <div class="number-section-text">
+                <h6>
+                    Limited Functionality and Workflow Inefficiencies
+                </h6>
+                <p>
+                    The application lacks essential features like generating forms or having a document library required for thorough investigations. This forced staff to rely on manual workarounds or supplementary tools leading to inefficiencies and an increase in the time and effort needed to complete investigations.
+                </p>
+            </div>
+        </div>
+
+        <div class="number-section sub-section project-section">
+            <img src="./Website Images/Icons/Numbers/Property 1=2.svg" alt="number 1">
+            <div class="number-section-text">
+                <h6>
+                    Poor Accessibility and Usability
+                </h6>
+                <p>
+                    Investigators relied on two separate applications with a difficult sign-up and validation process creating barriers for staff who need quick, reliable access to conduct investigations. We also found that the main application did not meet WCAG accessibility standards, hindering our investigators, reducing productivity, and increasing incomplete or delayed investigations.
+                </p>
+            </div>
+        </div>
+
+        
+        <div class="number-section sub-section project-section">
+            <img src="./Website Images/Icons/Numbers/Property 1=3.svg" id="three" alt="number 1">
+            <div class="number-section-text">
+                <h6>
+                    Outdated and Unengaging Interface Design
+                </h6>
+                <p>
+                    The bland, outdated design of the interface lacks visual hierarchy and a guided user flow, making it challenging for users to navigate and prioritize tasks effectively. This results in a poor user experience that decreases job satisfaction and contributes to a lower adoption of the tool.
+                </p>
+            </div>
+        </div>
+
 
 
 
