--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,7 @@
         </ul>
     </div> 
 
-    <button class="btn-primary">Let's Work Together!</button>
+    <button class="btn-2">Let's Work Together!</button>
     <!-- <div class="nav-socials">
         <a href="./index.html"><img src="./Website Images/Icons/IG Icon - grey fill.svg" alt="instagram icon"></a>
         <a href="./index.html"><img src="./Website Images/Icons/LinkedIn Icon - grey fill.svg" alt="LinkedIn icon"></a>
