Case Study Updates

--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
     </div>
 
 <div class="hero-2">
-    <div class="hero-2-container">
+    <div class="hero-2-container hidden">
         <div class="hero-2-content half">
             <div class="sub-title">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight">
