--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="hero">
         <img src="./Website Images/Assets/Grid Hero Image-Final.png" alt="Faded Grid Background">
-        <div class="hero-content">
+        <div class="hero-content hidden">
             <p class="p3">
                 UI/UX DESIGNER | GRAPHIC DESIGNER
             </p>
@@ -57,7 +57,7 @@
 
         <div class="featured-projects section-padding">
             <a href="./llp.html" class="link-wrapper">
-                <div class="project-card-1" id="LLP">
+                <div class="project-card-1 hidden" id="LLP">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
                             <h3>
@@ -76,28 +76,26 @@
                 </div>
             </a>
 
-            <div class="project-card-1" id="pc">
-                <div class="pc1-main-content">
-                    <div class="pc1-content">
-                        <h3>
-                            Pristine Clean
-                        </h3>
-                        <p class="p3">
-                            UI/UX Design | Branding           
-                        </p>
+            <a href="./pristine clean case study.html" class="link-wrapper">
+                <div class="project-card-1 hidden" id="pc">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                Pristine Clean
+                            </h3>
+                            <p class="p3">
+                                UI/UX Design | Branding           
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </div>
                     </div>
-                    <div class="pc1-button">
-                        <a href="#">
-                            <!-- <p class="p3">View Project</p> -->
-                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                        </a>
-                    </div>
+                    <img src="./Website Images/Pristine Cline/PC Home Page-Portfolio Home Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
                 </div>
-                <img src="./Website Images/Pristine Cline/PC Home Page-Portfolio Home Mockup.jpg" alt="Labor Law Pro Application Dashboard" class="pc1-img">
+            </a>
 
-            </div>
-
-            <div class="project-card-1" id="arrow">
+            <div class="project-card-1 hidden" id="arrow">
                 <div class="pc1-main-content">
                     <div class="pc1-content">
                         <h3>
@@ -119,7 +117,7 @@
             </div>
         </div>
 
-        <div class="title-section section-padding">
+        <div class="title-section section-padding hidden">
             <p>
                 More Projects
             </p>
@@ -129,7 +127,7 @@
         </div>
 
 
-        <div class="other-projects section-padding">
+        <div class="other-projects section-padding hidden">
                 <div class="project-card-2" id="Ignite">
                     <div class="pc1-main-content">
                         <div class="pc1-content">
@@ -250,7 +248,7 @@
 
 
 
-        <div class="title-section section-padding">
+        <div class="title-section section-padding hidden">
             <p>
                 what i offer
             </p>
@@ -259,7 +257,7 @@
             </h2>
         </div>
 
-        <div class="service-card-container section-padding">
+        <div class="service-card-container section-padding hidden">
             <div class="service-card">  
                 <img src="./Website Images/Icons/UI UX Icon.svg" alt="UI/UX Design Icon">
                 <h4>ui & ux design</h4>
@@ -287,7 +285,7 @@
           
           </div>
 
-          <div class="title-section section-padding">
+          <div class="title-section section-padding hidden">
             <p>
                 expertise
             </p>
@@ -296,7 +294,7 @@
             </h2>
         </div>
 
-        <div class="skill-icons section-padding">
+        <div class="skill-icons section-padding hidden">
             <div class="icon-box"><img src="./Website Images/Icons/Adobe-Icon.svg" alt="Adobe Icon"><div class="icon-desc">Adobe</div></div>
             <div class="icon-box"><img src="./Website Images/Icons/Illustrator-icon.svg" alt="Illustrator icon"><div class="icon-desc">Illustrator</div></div>
             <div class="icon-box"><img src="./Website Images/Icons/InDesign-icon.svg" alt="InDesign Icon"><div class="icon-desc">InDesign</div></div>
@@ -308,7 +306,7 @@
             <div class="icon-box"><img src="./Website Images/Icons/JavaScript-icon.svg" alt="JavaScript Icon"><div class="icon-desc">JavaScript</div></div>
         </div>  
 
-        <div class="title-section section-padding">
+        <div class="title-section section-padding hidden">
             <p>
                 My values
             </p>
@@ -318,7 +316,7 @@
         </div>
 
 
-        <div class="service-card-container section-padding">
+        <div class="service-card-container section-padding hidden">
             <div class="service-card sc-video">  
                 <video id="video1" id="bulb-animation" muted>
                     <source src="./Website Images/Icons/Qualities Icons/Bulb Animation-rgb.mp4" type="video/mp4">
