project page updates 2

--- a/llp.html
+++ b/llp.html
@@ -473,6 +473,16 @@
             </div>
         </div>
 
+        <div id="projects">
+            <script>
+                fetch('projects.html')
+                    .then(response => response.text())
+                    .then(html => {
+                        document.getElementById('projects').innerHTML = html;
+                    });
+            </script>
+        </div>
+
 
 
     </main>
