katsbrune update commit

--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
                 </div>
             </a>
 
+            <div class="project-card-1 hidden" id="katsbrune">
+                <div class="pc1-main-content">
+                    <div class="pc1-content">
+                        <h3>
+                            The katsbrune bookstore & cafe
+                        </h3>
+                        <p class="p3">
+                            Brand Identity and Guidelines                        
+                        </p>
+                    </div>
+                    <div class="pc1-button">
+                        <a href="#">
+                            <!-- <p class="p3">View Project</p> -->
+                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </a>
+                    </div>
+                </div>
+                <img src="./Website Images/Katsbrune/Brand Identity Paper Mockup.png" alt="Arrow Application Dashboard" class="pc1-img">
+
+            </div>
+
             <div class="project-card-1 hidden" id="arrow">
                 <div class="pc1-main-content">
                     <div class="pc1-content">
