--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -24,10 +24,10 @@
         <div class="project-hero">
             <div class="ph-content">
                 <h2 class="h10">
-                    INTERNAL APPLICATION
+                    Website Design and Branding
                 </h2>
                 <h1 class="h9">
-                    Labor Law Pro
+                    Pristine Clean
                 </h1>
             </div>
             <img src="./Website Images/Pristine Cline/Hero Dashboard Mockup.png" alt="Pristine Clean Website dashboard">
